src/objects/Finding__c.object
<CustomObject>
    <description>Custom object for capturing Findings (for QIPP Application), for Audits</description>
    <fields>
        <fullName>Audit_Name__c</fullName>
        <label>Audit Name</label>
        <referenceTo>Management_System_Audit__c</referenceTo>
        <relationshipName>Findings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auditor</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipName>Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Conformance Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Conformance Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity For Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strength</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FindingStartDate__c</fullName>
        <formula>Audit_Name__r.Audit_Executed_Date__c</formula>
        <label>Finding Start /Audit Execute Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finding_Age__c</fullName>
        <formula>if ( ISBLANK(Finding_Completion_Date_Actual__c), 

TODAY() - FindingStartDate__c, 
(Finding_Completion_Date_Actual__c - FindingStartDate__c) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finding Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finding_Auditor_Email__c</fullName>
        <label>Finding Auditor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finding_Completion_Date_Actual__c</fullName>
        <inlineHelpText>Blank upon creating new record; will be updated when all findings are closed; select from the calendar.</inlineHelpText>
        <label>Actual Finding Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finding_Completion_Date_Forecast__c</fullName>
        <label>Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finding_Completion_Date_Target__c</fullName>
        <inlineHelpText>Should be 90 days in most cases.</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finding_Created_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>Today&apos;s Date</inlineHelpText>
        <label>Finding Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finding_Description_Detailed__c</fullName>
        <inlineHelpText>As written in the audit report</inlineHelpText>
        <label>Finding Description (Detailed)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finding_Name__c</fullName>
        <inlineHelpText>Summary to describe the finding, be specific.</inlineHelpText>
        <label>Finding Name / CB Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finding_Notes__c</fullName>
        <label>Finding Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finding_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id, TEXT( Finding_Type__c) +&quot;-&quot;+ Name , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finding Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finding_Owner_Email__c</fullName>
        <label>Finding Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finding_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Search by the *First Name* (or) *Last Name* - append * at the beginning and at the end - and you will be provided with a list of contacts to choose from.</inlineHelpText>
        <label>Finding Owner</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Findings (Finding Owner)</relationshipLabel>
        <relationshipName>Findings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finding_Schedule_Status__c</fullName>
        <formula>IF ( OR( ISPICKVAL( Finding_State__c , &apos;Complete&apos;), ISPICKVAL( Finding_State__c , &apos;Canceled&apos;)), TEXT(Finding_State__c), 
IF( Finding_Completion_Date_Forecast__c = Finding_Completion_Date_Target__c , &quot;On Plan&quot;, 

IF( Finding_Completion_Date_Forecast__c &gt; Finding_Completion_Date_Target__c , &quot;Behind&quot;, 

IF( Finding_Completion_Date_Forecast__c &lt; Finding_Completion_Date_Target__c , &quot;Ahead&quot;, 

IF( OR(ISBLANK( Finding_Completion_Date_Forecast__c ), ISBLANK( Finding_Completion_Date_Target__c ) ) , &quot;TBD&quot;, &quot;&quot; 

) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finding Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finding_State__c</fullName>
        <inlineHelpText>Change to In Progress</inlineHelpText>
        <label>Finding State</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finding_Type__c</fullName>
        <label>Mgmt Sys Standard</label>
        <picklist>
            <picklistValues>
                <fullName>ISO9001:2008/TL9000 R5.5</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ISO14001:2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OHSAS18001:2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO27001:2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO27001:2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO22301:2012</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finding_URL__c</fullName>
        <inlineHelpText>A live link can be entered to location of audit report</inlineHelpText>
        <label>Finding URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Nature_of_a_strength__c</fullName>
        <inlineHelpText>This Strength is considered a NET GOOD PRACTICE and worth sharing further.</inlineHelpText>
        <label>Nature of a strength</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_QLT_Function__c</fullName>
        <label>Primary Function</label>
        <picklist>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E2E audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Resources (WR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSSE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Area_Owner__c</fullName>
        <inlineHelpText>Enter the area responsible for implementing the corrective actions</inlineHelpText>
        <label>Process Area Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CA Complete/PA Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA/PA Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Verification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standards_Reference__c</fullName>
        <label>Standards Reference</label>
        <picklist>
            <controllingField>Finding_Type__c</controllingField>
            <picklistValues>
                <fullName>10.1.a to e Improvement - Nonconformity and corrective action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.2 Improvement - Continual improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 General requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Understanding the organization and its context</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.1  Documentation Requirements-General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.1 Establish the ISMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.2. Quality Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.2 Implement and operate the ISMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.3.C.1 Control of Customer Supplied Documents and Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.3 Control of Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.3 Monitor and review the ISMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.4 Control of Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.4 Maintain and improve the ISMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.a Understanding the needs and expectations of interested parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2.b Understanding the needs and expectations of interested parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Environmental policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Establishing and managing the ISMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 OH&amp;S policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.1 Environmental aspects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.1 General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.1 Hazard identification, risk assessment and determining controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.2 Control of documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.2 Legal and other requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.3 Control of records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.3 Objectives, targets and programme(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.3 Objectives  and programme(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.a Determining the scope of the information security management system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.b Determining the scope of the information security management system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3.c Determining the scope of the information security management system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.3 Documentation requirements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Target_Completion_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Automatically populate the &quot;Target Completion Date&quot; to be the &quot;Finding Start /Audit Executed&quot; date + 90 calendar days</description>
        <label>Update Target Completion Date</label>
        <type>Checkbox</type>
    </fields>
    <label>QIPP Finding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Finding_Number__c</columns>
        <columns>Finding_Name__c</columns>
        <columns>Finding_Owner__c</columns>
        <columns>Audit_Name__c</columns>
        <columns>Finding_State__c</columns>
        <columns>Primary_QLT_Function__c</columns>
        <columns>Finding_Completion_Date_Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMS</fullName>
        <columns>Finding_Number__c</columns>
        <columns>Finding_Name__c</columns>
        <columns>Finding_Owner__c</columns>
        <columns>Audit_Name__c</columns>
        <columns>Finding_State__c</columns>
        <columns>Primary_QLT_Function__c</columns>
        <columns>Finding_Completion_Date_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Finding_Type__c</field>
            <operation>equals</operation>
            <value>EMS</value>
        </filters>
        <label>EMS</label>
    </listViews>
    <listViews>
        <fullName>HSS</fullName>
        <columns>Finding_Number__c</columns>
        <columns>Finding_Name__c</columns>
        <columns>Finding_Owner__c</columns>
        <columns>Audit_Name__c</columns>
        <columns>Finding_State__c</columns>
        <columns>Primary_QLT_Function__c</columns>
        <columns>Finding_Completion_Date_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Finding_Type__c</field>
            <operation>equals</operation>
            <value>HSS</value>
        </filters>
        <label>HSS</label>
    </listViews>
    <listViews>
        <fullName>QMS</fullName>
        <columns>Finding_Number__c</columns>
        <columns>Finding_Name__c</columns>
        <columns>Finding_Owner__c</columns>
        <columns>Audit_Name__c</columns>
        <columns>Finding_State__c</columns>
        <columns>Primary_QLT_Function__c</columns>
        <columns>Finding_Completion_Date_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Finding_Type__c</field>
            <operation>equals</operation>
            <value>QMS</value>
        </filters>
        <label>QMS</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Finding#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_Date_Future_Should_Be_Prevented</fullName>
        <active>true</active>
        <description>Future date entry in the “Actual” field should be restricted. It can have dates only either in past or present</description>
        <errorConditionFormula>Finding_Completion_Date_Actual__c  &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Finding_Completion_Date_Actual__c</errorDisplayField>
        <errorMessage>Actual Finding Completion Date Should Be Either In Past Or Present</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Completion_Date_Past_Entry_Restrn</fullName>
        <active>true</active>
        <description>Past date entry in the “Target completion date ” field shall be restricted. It can have dates only either in present  or future, Rule would awake when Finding Start /Audit Execute Date left empty and restrn shall still be there refraining invalid entry.</description>
        <errorConditionFormula>AND(ISBLANK(FindingStartDate__c),Finding_Completion_Date_Target__c  &lt;  TODAY())</errorConditionFormula>
        <errorDisplayField>Finding_Completion_Date_Target__c</errorDisplayField>
        <errorMessage>Target completion date should be either in Present or Future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Actual_Completion_Date</fullName>
        <active>false</active>
        <description>Cannot change Finding State to completed unless an ACTUAL date is entered for this Finding.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Finding_State__c, &quot;Complete&quot;), 

ISBLANK(Finding_Completion_Date_Actual__c ) 

)</errorConditionFormula>
        <errorDisplayField>Finding_Completion_Date_Actual__c</errorDisplayField>
        <errorMessage>Finding State cannot be set to &quot;Complete&quot; unless Actual completion date is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Actual_Completion_Date_Entry</fullName>
        <active>true</active>
        <description>Actual Finding Completion Date is entered while Finding State value found other than “Complete”.</description>
        <errorConditionFormula>AND(NOT(ISBLANK( Finding_Completion_Date_Actual__c )) , NOT( ISPICKVAL( Finding_State__c , &apos;Complete&apos;) ))</errorConditionFormula>
        <errorDisplayField>Finding_Completion_Date_Actual__c</errorDisplayField>
        <errorMessage>Actual Finding Completion Date is entered while Finding State value found other than “Complete”.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Audit_Status</fullName>
        <active>true</active>
        <description>Findings can only be created when Audit Status equals &quot;In Progress&quot;, &quot;Reported&quot; or &quot;Executed&quot;.</description>
        <errorConditionFormula>AND( ISNEW(), 

NOT (OR( ISPICKVAL(Audit_Name__r.Audit_Status__c, &apos;In Progress&apos;), 
ISPICKVAL(Audit_Name__r.Audit_Status__c, &apos;Reported&apos;), ISPICKVAL(Audit_Name__r.Audit_Status__c, &apos;Executed&apos;)))
)</errorConditionFormula>
        <errorMessage>Findings can only be created when Audit Status equals &quot;In Progress&quot;, &quot;Reported&quot; or &quot;Executed&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Record_Status</fullName>
        <active>false</active>
        <description>Cannot change Finding State to completed unless Record Status is set to &quot;Closed&quot; for this Finding.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Finding_State__c, &quot;Complete&quot;), 
NOT(ISPICKVAL(Record_Status__c, &quot;Closed&quot;))

)</errorConditionFormula>
        <errorDisplayField>Record_Status__c</errorDisplayField>
        <errorMessage>Finding State cannot be set to &quot;Complete&quot; unless  Record Status is set to &quot;Closed&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Target_Completion_Date</fullName>
        <active>true</active>
        <description>Target Completion Date should be greater than Finding Start Date / Audit Execute Date</description>
        <errorConditionFormula>Finding_Completion_Date_Target__c &lt;= FindingStartDate__c</errorConditionFormula>
        <errorDisplayField>Finding_Completion_Date_Target__c</errorDisplayField>
        <errorMessage>Target Completion Date should be greater than Finding Start Date / Audit Execute Date</errorMessage>
    </validationRules>
</CustomObject>